--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -92,3 +92,13 @@
     @apply bg-background text-foreground;
   }
 }
+
+html {
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+body {
+  margin-left: auto;
+  margin-right: auto;
+}
